--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 										<span class="date">8 November 2025</span>
 										<h2><a href="#">Industry Visit 1 (Vlog)</a></h2>
 									</header>
-									👉 [Watch the Industry Visit Vlog](https://youtu.be/p05J5pTfHg4?si=_W62TNPhAZhS-DWl)
+									
+									🎥 [Watch the Industry Visit Vlog on YouTube](https://youtu.be/p05J5pTfHg4?si=_W62TNPhAZhS-DWl)
+									
 									<p>Visiting UTMDigital has changed my view on how teamwork really works in real life jobs. It shows that many teams involve to make one product or any projects they receive by their customer.
 										This give me a push to be a teamwork person so in the future or now i can be someone that is easy to approach in group projects.</p>
 									<ul class="actions special">
@@ -208,6 +210,7 @@
 	</body>
 
 </html>
+
 
 
 
