--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									</header>
 									
 									<a href="https://youtu.be/p05J5pTfHg4?si=_W62TNPhAZhS-DWl">
-										<a href="#" class="image main"><img src="images/Screenshot 2026-01-06 154638.png" alt="" /><ahref="https://youtu.be/p05J5pTfHg4?si=_W62TNPhAZhS-DWl"</ahref></a>
+										<a href="https://youtu.be/p05J5pTfHg4?si=_W62TNPhAZhS-DWl" class="image main"><img src="images/Screenshot 2026-01-06 154638.png" alt="" /><ahref="https://youtu.be/p05J5pTfHg4?si=_W62TNPhAZhS-DWl"</ahref></a>
 										🎥 Watch the Industry Visit Vlog on YouTube
 																					</a>
 									<br><br>
@@ -214,6 +214,7 @@
 	</body>
 
 </html>
+
 
 
 
