--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										<span class="date">11 December 2025</span>
 										<h2><a href="#">Industry Talk 1 (Poster)</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/PPG Industry Talk.png" alt="" /></a>
+									<a href="PPG Industry Talk.png" class="image fit"><img src="images/PPG Industry Talk.png" alt="" /></a>
 									<p>This assignment give me a few ideas on how globally PPG have reached as a company. The main thing that intrigued me during the talk is how they used Information and Communication Technology(ICT) to solve a problem that once have been a issue before. 
 										This make me realize that ICT has many uses in industry and show that technology can become most useful solution in current era.</p>
 									<ul class="actions special">
@@ -148,9 +148,9 @@
 										<span class="date">2 January 2026</span>
 										<h2><a href="#">Industry Talk 3 (Academic Writing)</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Report Assignment 3-1.png" alt="" /></a>
-									<a href="#" class="image fit"><img src="images/Report Assignment 3-2.png" alt="" /></a>
-									<a href="#" class="image fit"><img src="images/Report Assignment 3-3.png" alt="" /></a>
+									<a href="Report Assignment 3-1.png" class="image fit"><img src="images/Report Assignment 3-1.png" alt="" /></a>
+									<a href="Report Assignment 3-2.png" class="image fit"><img src="images/Report Assignment 3-2.png" alt="" /></a>
+									<a href="Report Assignment 3-3.png" class="image fit"><img src="images/Report Assignment 3-3.png" alt="" /></a>
 									<p>From Industrial Talk 2, I gained valuable insights into project management and system development in the industry. The talk helped me understand the importance of applying the Software Development Life Cycle (SDLC) correctly and how it is used in real projects. I also learned that strong technical knowledge must be supported by good planning, communication, and teamwork.
 									   One improvement that can be made is to include more real project examples and interactive discussions, which would help students better understand how concepts are applied in actual working environments.
                                        Overall, Industrial Talk 2 motivated me to improve both my technical and soft skills and to continuously learn in order to be better prepared for future challenges in the computing field.</p>
@@ -175,8 +175,8 @@
 										<span class="date">5 November 2025</span>
 										<h2><a href="#">PC Assemble Lab (Quiz)</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/PC Assemble Lab page 1.jpeg" alt="" /></a>
-									<a href="#" class="image fit"><img src="images/PC Assemble Lab page 2.jpeg" alt="" /></a>
+									<a href="PC Assemble Lab page 1.jpeg" class="image fit"><img src="images/PC Assemble Lab page 1.jpeg" alt="" /></a>
+									<a href="PC Assemble Lab page 2.jpeg" class="image fit"><img src="images/PC Assemble Lab page 2.jpeg" alt="" /></a>
 									<p>This quiz have given me more information on how to assemble PC (Personal Computer) and identify all the components inside the PC. Overall, this quiz was a valuable learning experience. It strengthened my theoretical knowledge and prepared me better for hands-on PC assembly tasks in the future. 
 										I now feel more confident and motivated to improve my skills and apply them in real-world situations.</p>
 									<ul class="actions special">
@@ -214,6 +214,7 @@
 	</body>
 
 </html>
+
 
 
 
