--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">ePortfolio</a></li>
 						</ul>
-						<u1 class="icons">
+						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/muhammad-zuhairi-mohd-ridhuan-" class="icon fa-linkedln"><span class="label">Linkedln</span></a></li>
 							<li><a href="https://github.com/zuhairi06s" class="icon fa-github"><span class="label">Github</span></a></li>
-						</u1>
+						</ul>
 					</nav>
 
 				<!-- Main -->
@@ -216,6 +216,7 @@
 	</body>
 
 </html>
+
 
 
 
