--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<li class="active"><a href="index.html">ePortfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/muhammad-zuhairi-mohd-ridhuan-" class="icon fa-linkedln"><span class="label">Linkedln</span></a></li>
+							<li><a href="https://www.linkedin.com/in/muhammad-zuhairi-mohd-ridhuan-" class="icon fa-linkedin"><span class="label">Linkedln</span></a></li>
 							<li><a href="https://github.com/zuhairi06s" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 					</nav>
@@ -216,6 +216,7 @@
 	</body>
 
 </html>
+
 
 
 
