--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	
 	</head>
 	<body class="is-preload">
@@ -39,8 +40,8 @@
 							<li class="active"><a href="index.html">ePortfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/muhammad-zuhairi-mohd-ridhuan-" class="icon fa-linkedin"><span class="label">Linkedln</span></a></li>
-							<li><a href="https://github.com/zuhairi06s" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/muhammad-zuhairi-mohd-ridhuan-" class="fab fa-linkedin"><span class="label">Linkedln</span></a></li>
+							<li><a href="https://github.com/zuhairi06s" class="fab fa-github"><span class="label">Github</span></a></li>
 						</ul>
 					</nav>
 
@@ -217,6 +218,7 @@
 	</body>
 
 </html>
+
 
 
 
